benchmarks/graphviz/graphviz-2.34.0/lib/expr/y.output
Terminals unused in grammar

   MINTOKEN
   CHARACTER
   VOIDTYPE
   ADDRESS
   CALL
   ITERATE
   MEMBER
   POS
   PRAGMA
   PRE
   F2I
   F2S
   I2F
   I2S
   S2B
   S2F
   S2I
   F2X
   I2X
   S2X
   X2F
   X2I
   X2S
   X2X
   XPRINT
   MAXTOKEN


State 216 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 254 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list action_list

    2 action_list: /* empty */
    3            | action_list action

    4 $@1: /* empty */

    5 action: LABEL ':' $@1 statement_list

    6 statement_list: /* empty */
    7               | statement_list statement

    8 statement: '{' statement_list '}'
    9          | expr_opt ';'

   10 $@2: /* empty */

   11 $@3: /* empty */

   12 statement: static $@2 DECLARE $@3 dcl_list ';'
   13          | IF '(' expr ')' statement else_opt
   14          | FOR '(' variable ')' statement
   15          | FOR '(' expr_opt ';' expr_opt ';' expr_opt ')' statement
   16          | ITERATER '(' variable ')' statement
   17          | UNSET '(' DYNAMIC ')'
   18          | UNSET '(' DYNAMIC ',' expr ')'
   19          | WHILE '(' expr ')' statement

   20 $@4: /* empty */

   21 statement: SWITCH '(' expr $@4 ')' '{' switch_list '}'
   22          | BREAK expr_opt ';'
   23          | CONTINUE expr_opt ';'
   24          | RETURN expr_opt ';'

   25 switch_list: /* empty */
   26            | switch_list switch_item

   27 switch_item: case_list statement_list

   28 case_list: case_item
   29          | case_list case_item

   30 case_item: CASE constant ':'
   31          | DEFAULT ':'

   32 static: /* empty */
   33       | STATIC

   34 dcl_list: dcl_item
   35         | dcl_list ',' dcl_item

   36 $@5: /* empty */

   37 dcl_item: dcl_name $@5 array initialize

   38 dcl_name: NAME
   39         | DYNAMIC
   40         | ID
   41         | FUNCTION

   42 name: NAME
   43     | DYNAMIC

   44 else_opt: /* empty */
   45         | ELSE statement

   46 expr_opt: /* empty */
   47         | expr

   48 expr: '(' expr ')'
   49     | '(' DECLARE ')' expr
   50     | expr '<' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | expr '%' expr
   55     | expr LS expr
   56     | expr RS expr
   57     | expr '>' expr
   58     | expr LE expr
   59     | expr GE expr
   60     | expr EQ expr
   61     | expr NE expr
   62     | expr '&' expr
   63     | expr '|' expr
   64     | expr '^' expr
   65     | expr '+' expr
   66     | expr AND expr
   67     | expr OR expr
   68     | expr ',' expr

   69 $@6: /* empty */

   70 $@7: /* empty */

   71 expr: expr '?' $@6 expr ':' $@7 expr
   72     | '!' expr
   73     | '#' DYNAMIC
   74     | '~' expr
   75     | '-' expr
   76     | '+' expr
   77     | '&' variable
   78     | ARRAY '[' args ']'
   79     | FUNCTION '(' args ')'
   80     | GSUB '(' args ')'
   81     | SUB '(' args ')'
   82     | SUBSTR '(' args ')'
   83     | splitop '(' expr ',' DYNAMIC ')'
   84     | splitop '(' expr ',' DYNAMIC ',' expr ')'
   85     | EXIT '(' expr ')'
   86     | RAND '(' ')'
   87     | SRAND '(' ')'
   88     | SRAND '(' expr ')'
   89     | PROCEDURE '(' args ')'
   90     | PRINT '(' args ')'
   91     | print '(' args ')'
   92     | scan '(' args ')'
   93     | variable assign
   94     | INC variable
   95     | variable INC
   96     | expr IN_OP DYNAMIC
   97     | DEC variable
   98     | variable DEC
   99     | constant

  100 splitop: SPLIT
  101        | TOKENS

  102 constant: CONSTANT
  103         | FLOATING
  104         | INTEGER
  105         | STRING
  106         | UNSIGNED

  107 print: PRINTF
  108      | QUERY
  109      | SPRINTF

  110 scan: SCANF
  111     | SSCANF

  112 variable: ID members
  113         | DYNAMIC index members
  114         | NAME

  115 array: /* empty */
  116      | '[' ']'
  117      | '[' DECLARE ']'

  118 index: /* empty */
  119      | '[' expr ']'

  120 args: /* empty */
  121     | arg_list

  122 arg_list: expr
  123         | arg_list ',' expr

  124 formals: /* empty */
  125        | DECLARE
  126        | formal_list

  127 formal_list: formal_item
  128            | formal_list ',' formal_item

  129 $@8: /* empty */

  130 formal_item: DECLARE $@8 name

  131 members: /* empty */
  132        | member
  133        | '.' ID member

  134 member: '.' ID
  135       | '.' NAME

  136 assign: /* empty */
  137       | '=' expr

  138 initialize: assign

  139 $@9: /* empty */

  140 $@10: /* empty */

  141 initialize: '(' $@9 formals $@10 ')' '{' statement_list '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 72
'#' (35) 73
'%' (37) 54
'&' (38) 62 77
'(' (40) 13 14 15 16 17 18 19 21 48 49 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 141
')' (41) 13 14 15 16 17 18 19 21 48 49 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 141
'*' (42) 52
'+' (43) 65 76
',' (44) 18 35 68 83 84 123 128
'-' (45) 51 75
'.' (46) 133 134 135
'/' (47) 53
':' (58) 5 30 31 71
';' (59) 9 12 15 22 23 24
'<' (60) 50
'=' (61) 137
'>' (62) 57
'?' (63) 71
'[' (91) 78 116 117 119
']' (93) 78 116 117 119
'^' (94) 64
'{' (123) 8 21 141
'|' (124) 63
'}' (125) 8 21 141
'~' (126) 74
error (256)
MINTOKEN (258)
INTEGER (259) 104
UNSIGNED (260) 106
CHARACTER (261)
FLOATING (262) 103
STRING (263) 105
VOIDTYPE (264)
STATIC (265) 33
ADDRESS (266)
ARRAY (267) 78
BREAK (268) 22
CALL (269)
CASE (270) 30
CONSTANT (271) 102
CONTINUE (272) 23
DECLARE (273) 12 49 117 125 130
DEFAULT (274) 31
DYNAMIC (275) 17 18 39 43 73 83 84 96 113
ELSE (276) 45
EXIT (277) 85
FOR (278) 14 15
FUNCTION (279) 41 79
GSUB (280) 80
ITERATE (281)
ITERATER (282) 16
ID (283) 40 112 133 134
IF (284) 13
LABEL (285) 5
MEMBER (286)
NAME (287) 38 42 114 135
POS (288)
PRAGMA (289)
PRE (290)
PRINT (291) 90
PRINTF (292) 107
PROCEDURE (293) 89
QUERY (294) 108
RAND (295) 86
RETURN (296) 24
SCANF (297) 110
SPLIT (298) 100
SPRINTF (299) 109
SRAND (300) 87 88
SSCANF (301) 111
SUB (302) 81
SUBSTR (303) 82
SWITCH (304) 21
TOKENS (305) 101
UNSET (306) 17 18
WHILE (307) 19
F2I (308)
F2S (309)
I2F (310)
I2S (311)
S2B (312)
S2F (313)
S2I (314)
F2X (315)
I2X (316)
S2X (317)
X2F (318)
X2I (319)
X2S (320)
X2X (321)
XPRINT (322)
OR (323) 67
AND (324) 66
NE (325) 61
EQ (326) 60
GE (327) 59
LE (328) 58
RS (329) 56
LS (330) 55
IN_OP (331) 96
UNARY (332)
DEC (333) 97 98
INC (334) 94 95
CAST (335)
MAXTOKEN (336)


Nonterminals, with rules where they appear

$accept (107)
    on left: 0
program (108)
    on left: 1, on right: 0
action_list (109)
    on left: 2 3, on right: 1 3
action (110)
    on left: 5, on right: 3
$@1 (111)
    on left: 4, on right: 5
statement_list (112)
    on left: 6 7, on right: 1 5 7 8 27 141
statement (113)
    on left: 8 9 12 13 14 15 16 17 18 19 21 22 23 24, on right: 7 13
    14 15 16 19 45
$@2 (114)
    on left: 10, on right: 12
$@3 (115)
    on left: 11, on right: 12
$@4 (116)
    on left: 20, on right: 21
switch_list (117)
    on left: 25 26, on right: 21 26
switch_item (118)
    on left: 27, on right: 26
case_list (119)
    on left: 28 29, on right: 27 29
case_item (120)
    on left: 30 31, on right: 28 29
static (121)
    on left: 32 33, on right: 12
dcl_list (122)
    on left: 34 35, on right: 12 35
dcl_item (123)
    on left: 37, on right: 34 35
$@5 (124)
    on left: 36, on right: 37
dcl_name (125)
    on left: 38 39 40 41, on right: 37
name (126)
    on left: 42 43, on right: 130
else_opt (127)
    on left: 44 45, on right: 13
expr_opt (128)
    on left: 46 47, on right: 9 15 22 23 24
expr (129)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93 94 95 96 97 98 99, on right: 13 18 19 21 47 48 49
    50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 71 72
    74 75 76 83 84 85 88 96 119 122 123 137
$@6 (130)
    on left: 69, on right: 71
$@7 (131)
    on left: 70, on right: 71
splitop (132)
    on left: 100 101, on right: 83 84
constant (133)
    on left: 102 103 104 105 106, on right: 30 99
print (134)
    on left: 107 108 109, on right: 91
scan (135)
    on left: 110 111, on right: 92
variable (136)
    on left: 112 113 114, on right: 14 16 77 93 94 95 97 98
array (137)
    on left: 115 116 117, on right: 37
index (138)
    on left: 118 119, on right: 113
args (139)
    on left: 120 121, on right: 78 79 80 81 82 89 90 91 92
arg_list (140)
    on left: 122 123, on right: 121 123
formals (141)
    on left: 124 125 126, on right: 141
formal_list (142)
    on left: 127 128, on right: 126 128
formal_item (143)
    on left: 130, on right: 127 128
$@8 (144)
    on left: 129, on right: 130
members (145)
    on left: 131 132 133, on right: 112 113
member (146)
    on left: 134 135, on right: 132 133
assign (147)
    on left: 136 137, on right: 93 138
initialize (148)
    on left: 138 141, on right: 37
$@9 (149)
    on left: 139, on right: 141
$@10 (150)
    on left: 140, on right: 141


state 0

    0 $accept: . program $end

    $default  reduce using rule 6 (statement_list)

    program         go to state 1
    statement_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statement_list . action_list
    7 statement_list: statement_list . statement

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    STATIC     shift, and go to state 8
    ARRAY      shift, and go to state 9
    BREAK      shift, and go to state 10
    CONSTANT   shift, and go to state 11
    CONTINUE   shift, and go to state 12
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FOR        shift, and go to state 15
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ITERATER   shift, and go to state 18
    ID         shift, and go to state 19
    IF         shift, and go to state 20
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    RETURN     shift, and go to state 27
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    SWITCH     shift, and go to state 35
    TOKENS     shift, and go to state 36
    UNSET      shift, and go to state 37
    WHILE      shift, and go to state 38
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47
    '{'        shift, and go to state 48

    DECLARE   reduce using rule 32 (static)
    ';'       reduce using rule 46 (expr_opt)
    $default  reduce using rule 2 (action_list)

    action_list  go to state 49
    statement    go to state 50
    static       go to state 51
    expr_opt     go to state 52
    expr         go to state 53
    splitop      go to state 54
    constant     go to state 55
    print        go to state 56
    scan         go to state 57
    variable     go to state 58


state 3

    0 $accept: program $end .

    $default  accept


state 4

  104 constant: INTEGER .

    $default  reduce using rule 104 (constant)


state 5

  106 constant: UNSIGNED .

    $default  reduce using rule 106 (constant)


state 6

  103 constant: FLOATING .

    $default  reduce using rule 103 (constant)


state 7

  105 constant: STRING .

    $default  reduce using rule 105 (constant)


state 8

   33 static: STATIC .

    $default  reduce using rule 33 (static)


state 9

   78 expr: ARRAY . '[' args ']'

    '['  shift, and go to state 59


state 10

   22 statement: BREAK . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 46 (expr_opt)

    expr_opt  go to state 60
    expr      go to state 53
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 11

  102 constant: CONSTANT .

    $default  reduce using rule 102 (constant)


state 12

   23 statement: CONTINUE . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 46 (expr_opt)

    expr_opt  go to state 61
    expr      go to state 53
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 13

  113 variable: DYNAMIC . index members

    '['  shift, and go to state 62

    $default  reduce using rule 118 (index)

    index  go to state 63


state 14

   85 expr: EXIT . '(' expr ')'

    '('  shift, and go to state 64


state 15

   14 statement: FOR . '(' variable ')' statement
   15          | FOR . '(' expr_opt ';' expr_opt ';' expr_opt ')' statement

    '('  shift, and go to state 65


state 16

   79 expr: FUNCTION . '(' args ')'

    '('  shift, and go to state 66


state 17

   80 expr: GSUB . '(' args ')'

    '('  shift, and go to state 67


state 18

   16 statement: ITERATER . '(' variable ')' statement

    '('  shift, and go to state 68


state 19

  112 variable: ID . members

    '.'  shift, and go to state 69

    $default  reduce using rule 131 (members)

    members  go to state 70
    member   go to state 71


state 20

   13 statement: IF . '(' expr ')' statement else_opt

    '('  shift, and go to state 72


state 21

  114 variable: NAME .

    $default  reduce using rule 114 (variable)


state 22

   90 expr: PRINT . '(' args ')'

    '('  shift, and go to state 73


state 23

  107 print: PRINTF .

    $default  reduce using rule 107 (print)


state 24

   89 expr: PROCEDURE . '(' args ')'

    '('  shift, and go to state 74


state 25

  108 print: QUERY .

    $default  reduce using rule 108 (print)


state 26

   86 expr: RAND . '(' ')'

    '('  shift, and go to state 75


state 27

   24 statement: RETURN . expr_opt ';'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 46 (expr_opt)

    expr_opt  go to state 76
    expr      go to state 53
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 28

  110 scan: SCANF .

    $default  reduce using rule 110 (scan)


state 29

  100 splitop: SPLIT .

    $default  reduce using rule 100 (splitop)


state 30

  109 print: SPRINTF .

    $default  reduce using rule 109 (print)


state 31

   87 expr: SRAND . '(' ')'
   88     | SRAND . '(' expr ')'

    '('  shift, and go to state 77


state 32

  111 scan: SSCANF .

    $default  reduce using rule 111 (scan)


state 33

   81 expr: SUB . '(' args ')'

    '('  shift, and go to state 78


state 34

   82 expr: SUBSTR . '(' args ')'

    '('  shift, and go to state 79


state 35

   21 statement: SWITCH . '(' expr $@4 ')' '{' switch_list '}'

    '('  shift, and go to state 80


state 36

  101 splitop: TOKENS .

    $default  reduce using rule 101 (splitop)


state 37

   17 statement: UNSET . '(' DYNAMIC ')'
   18          | UNSET . '(' DYNAMIC ',' expr ')'

    '('  shift, and go to state 81


state 38

   19 statement: WHILE . '(' expr ')' statement

    '('  shift, and go to state 82


state 39

   77 expr: '&' . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 83


state 40

   76 expr: '+' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 84
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 41

   75 expr: '-' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 85
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 42

   72 expr: '!' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 86
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 43

   74 expr: '~' . expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 87
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 44

   73 expr: '#' . DYNAMIC

    DYNAMIC  shift, and go to state 88


state 45

   97 expr: DEC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 89


state 46

   94 expr: INC . variable

    DYNAMIC  shift, and go to state 13
    ID       shift, and go to state 19
    NAME     shift, and go to state 21

    variable  go to state 90


state 47

   48 expr: '(' . expr ')'
   49     | '(' . DECLARE ')' expr

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DECLARE    shift, and go to state 91
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    expr      go to state 92
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58


state 48

    8 statement: '{' . statement_list '}'

    $default  reduce using rule 6 (statement_list)

    statement_list  go to state 93


state 49

    1 program: statement_list action_list .
    3 action_list: action_list . action

    LABEL  shift, and go to state 94

    $default  reduce using rule 1 (program)

    action  go to state 95


state 50

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


state 51

   12 statement: static . $@2 DECLARE $@3 dcl_list ';'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 96


state 52

    9 statement: expr_opt . ';'

    ';'  shift, and go to state 97


state 53

   47 expr_opt: expr .
   50 expr: expr . '<' expr
   51     | expr . '-' expr
   52     | expr . '*' expr
   53     | expr . '/' expr
   54     | expr . '%' expr
   55     | expr . LS expr
   56     | expr . RS expr
   57     | expr . '>' expr
   58     | expr . LE expr
   59     | expr . GE expr
   60     | expr . EQ expr
   61     | expr . NE expr
   62     | expr . '&' expr
   63     | expr . '|' expr
   64     | expr . '^' expr
   65     | expr . '+' expr
   66     | expr . AND expr
   67     | expr . OR expr
   68     | expr . ',' expr
   71     | expr . '?' $@6 expr ':' $@7 expr
   96     | expr . IN_OP DYNAMIC

    ','    shift, and go to state 98
    '?'    shift, and go to state 99
    OR     shift, and go to state 100
    AND    shift, and go to state 101
    '|'    shift, and go to state 102
    '^'    shift, and go to state 103
    '&'    shift, and go to state 104
    NE     shift, and go to state 105
    EQ     shift, and go to state 106
    '<'    shift, and go to state 107
    '>'    shift, and go to state 108
    GE     shift, and go to state 109
    LE     shift, and go to state 110
    RS     shift, and go to state 111
    LS     shift, and go to state 112
    '+'    shift, and go to state 113
    '-'    shift, and go to state 114
    IN_OP  shift, and go to state 115
    '*'    shift, and go to state 116
    '/'    shift, and go to state 117
    '%'    shift, and go to state 118

    $default  reduce using rule 47 (expr_opt)


state 54

   83 expr: splitop . '(' expr ',' DYNAMIC ')'
   84     | splitop . '(' expr ',' DYNAMIC ',' expr ')'

    '('  shift, and go to state 119


state 55

   99 expr: constant .

    $default  reduce using rule 99 (expr)


state 56

   91 expr: print . '(' args ')'

    '('  shift, and go to state 120


state 57

   92 expr: scan . '(' args ')'

    '('  shift, and go to state 121


state 58

   93 expr: variable . assign
   95     | variable . INC
   98     | variable . DEC

    '='  shift, and go to state 122
    DEC  shift, and go to state 123
    INC  shift, and go to state 124

    $default  reduce using rule 136 (assign)

    assign  go to state 125


state 59

   78 expr: ARRAY '[' . args ']'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47

    $default  reduce using rule 120 (args)

    expr      go to state 126
    splitop   go to state 54
    constant  go to state 55
    print     go to state 56
    scan      go to state 57
    variable  go to state 58
    args      go to state 127
    arg_list  go to state 128


state 60

   22 statement: BREAK expr_opt . ';'

    ';'  shift, and go to state 129


state 61

   23 statement: CONTINUE expr_opt . ';'

    ';'  shift, and go to state 130


state 62

  119 index: '[' . expr ']'

    INTEGER    shift, and go to state 4
    UNSIGNED   shift, and go to state 5
    FLOATING   shift, and go to state 6
    STRING     shift, and go to state 7
    ARRAY      shift, and go to state 9
    CONSTANT   shift, and go to state 11
    DYNAMIC    shift, and go to state 13
    EXIT       shift, and go to state 14
    FUNCTION   shift, and go to state 16
    GSUB       shift, and go to state 17
    ID         shift, and go to state 19
    NAME       shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTF     shift, and go to state 23
    PROCEDURE  shift, and go to state 24
    QUERY      shift, and go to state 25
    RAND       shift, and go to state 26
    SCANF      shift, and go to state 28
    SPLIT      shift, and go to state 29
    SPRINTF    shift, and go to state 30
    SRAND      shift, and go to state 31
    SSCANF     shift, and go to state 32
    SUB        shift, and go to state 33
    SUBSTR     shift, and go to state 34
    TOKENS     shift, and go to state 36
    '&'        shift, and go to state 39
    '+'        shift, and go to state 40
    '-'        shift, and go to state 41
    '!'        shift, and go to state 42
    '~'        shift, and go to state 43
    '#'        shift, and go to state 44
    DEC        shift, and go to state 45
    INC        shift, and go to state 46
    '('        shift, and go to state 47
